pilot - added teamxlg svg - fixed pagination spacing

--- a/app/assets/stylesheets/home/home.css.scss
+++ b/app/assets/stylesheets/home/home.css.scss
@@ -68,7 +68,7 @@
 		margin-top: auto;
 		margin-bottom: auto;
 		vertical-align: middle;	
-		height: 100%;
+	/*	height: 100%;*/
 		top: 95px;
 		left: 152px;
 		position: absolute;
