--- a/app/assets/stylesheets/pilot.css.scss
+++ b/app/assets/stylesheets/pilot.css.scss
@@ -192,7 +192,7 @@ box-shadow: none;
 .pagination-custom > li > a, .pagination-custom > li > span {
 	position: relative;
 	float: left;
-	line-height: 1.4;
+	line-height: 1.5;
 	text-decoration: none;
 	width: 25px;
 	height: 25px;
@@ -207,8 +207,8 @@ box-shadow: none;
 }
 .pagination-custom > .active > a, .pagination-custom > .active > a:hover, .pagination-custom > .active > a:focus, .pagination-custom > .active > span, .pagination-custom > .active > span:hover, .pagination-custom > .active > span:focus {
 	z-index: 2;
-	background: #839DEE;
-	border: 2px solid #839DEE;
+	background: #7691CD;
+	border: 2px solid #7691CD;
 	color: white;
 	cursor: default;
 }
@@ -224,7 +224,7 @@ box-shadow: none;
 /* BTN */
 
 .btn-custom-2 {
-  background-color: #839DEE;
+  background-color: #7691CD;
   border: none;
   border-radius: 3px;
   color: #fff;
